objects/ARbug__c.object
<CustomObject>
    <fields>
        <fullName>ARBugDesc__c</fullName>
        <label>ARBugDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARBugId__c</fullName>
        <label>ARBugId</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARCasesCount__c</fullName>
        <label>ARCasesCount</label>
        <summaryForeignKey>ARCaseBugJN__c.ARbug__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FlagIndicator__c</fullName>
        <formula>CASE( ARCasesCount__c , 3,  IMAGE(&apos;/servlet/servlet.FileDownload?file=0152v00000FhHoi&apos;, &apos;GreenFlag&apos;, 50, 50) 

, &apos;I do not have flag&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FlagIndicator</label>
        <type>Text</type>
    </fields>
    <label>ARbug</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ARbug Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARbugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MyBugValidationRule</fullName>
        <active>true</active>
        <description>MyBugValidationRule</description>
        <errorConditionFormula>OR(
    CONTAINS( Name , &quot;laptop&quot;) ,
    CONTAINS( ARBugDesc__c , &quot;Laptop&quot;)
   )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Sorry!! Laptop issue are temporarily not entertained.</errorMessage>
    </validationRules>
</CustomObject>